Main content custom scrollbar design implemented,Overflow areas fixed

--- a/src/components/layout/mainLayout/styles.module.scss
+++ b/src/components/layout/mainLayout/styles.module.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/center.scss";
 
 .main {
-    min-height: 100vh;
+    max-height: 100vh;
     .header {
         background: #001628;
         padding: 40px;
@@ -29,6 +29,19 @@
     }
     &__content__area {
         margin: 10px 16px;
+        overflow-y: scroll;
+    }
+    &__content__area::-webkit-scrollbar {
+        width: 12px;
+    }
+    &__content__area::-webkit-scrollbar-track {
+        background: #001628;
+        border-radius: 20px;
+    }
+    &__content__area::-webkit-scrollbar-thumb {
+        background-color: #4d4a4a;
+        border: 3px solid;
+        border-radius: 20px;
     }
     &__content {
         padding: 15px;
